[tool.poetry]
name = "pyzube"
version = "0.1.0"
description = "A Python client for Zube.io's API"
authors = ["Senghan Bright <senghan.bright@deltaprojects.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
cryptography = "^2.7"
pyjwt = "^1.7"
pylint = "^2.4.2"

[tool.poetry.dev-dependencies]
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
